// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dto templater > with autoincrement 1`] = `
"/////////////////////////////////////
// THIS FILE WAS AUTO GENERATED
// DO NOT EDIT THIS FILE DIRECTLY
/////////////////////////////////////

import { Field, InputType, ID, Int } from \\"@nestjs/graphql\\";
import {} from \\"./client-path\\";
import { PaginatorInputs } from \\"../paginator\\";
import { UserConstructor } from \\"../models/User\\";

@InputType()
export class UserCreateInput implements UserConstructor {
  @Field(() => ID, { nullable: false })
  id!: number;
}

@InputType()
export class UserUpdateInput {
  @Field(() => ID, { nullable: true })
  id?: number;
}

@InputType()
export class UserWhereInput {
  @Field(() => ID, { nullable: true })
  id?: number;
}

@InputType()
export class UserPaginatorInput extends PaginatorInputs {}
"
`;

exports[`dto templater > with cuid 1`] = `
"/////////////////////////////////////
// THIS FILE WAS AUTO GENERATED
// DO NOT EDIT THIS FILE DIRECTLY
/////////////////////////////////////

import { Field, InputType, ID } from \\"@nestjs/graphql\\";
import {} from \\"./client-path\\";
import { PaginatorInputs } from \\"../paginator\\";
import { UserConstructor } from \\"../models/User\\";

@InputType()
export class UserCreateInput implements UserConstructor {
  @Field(() => ID, { nullable: false })
  id!: string;
}

@InputType()
export class UserUpdateInput {
  @Field(() => ID, { nullable: true })
  id?: string;
}

@InputType()
export class UserWhereInput {
  @Field(() => ID, { nullable: true })
  id?: string;
}

@InputType()
export class UserPaginatorInput extends PaginatorInputs {}
"
`;

exports[`dto templater > with integer 1`] = `
"/////////////////////////////////////
// THIS FILE WAS AUTO GENERATED
// DO NOT EDIT THIS FILE DIRECTLY
/////////////////////////////////////

import { Field, InputType, ID, Int } from \\"@nestjs/graphql\\";
import {} from \\"./client-path\\";
import { PaginatorInputs } from \\"../paginator\\";
import { UserConstructor } from \\"../models/User\\";

@InputType()
export class UserCreateInput implements UserConstructor {
  @Field(() => ID, { nullable: false })
  id!: string;

  @Field(() => Int!, { nullable: false })
  favoriteNumber!: number;
}

@InputType()
export class UserUpdateInput {
  @Field(() => ID, { nullable: true })
  id?: string;

  @Field(() => Int!, { nullable: false })
  favoriteNumber?: number;
}

@InputType()
export class UserWhereInput {
  @Field(() => ID, { nullable: true })
  id?: string;

  @Field(() => Int!, { nullable: true })
  favoriteNumber?: number;
}

@InputType()
export class UserPaginatorInput extends PaginatorInputs {}
"
`;

exports[`dto templater > with json 1`] = `
"/////////////////////////////////////
// THIS FILE WAS AUTO GENERATED
// DO NOT EDIT THIS FILE DIRECTLY
/////////////////////////////////////

import GraphQLJSON from \\"graphql-type-json\\";

import { Field, InputType, ID, Int } from \\"@nestjs/graphql\\";
import { Prisma } from \\"./client-path\\";
import { PaginatorInputs } from \\"../paginator\\";
import { UserConstructor } from \\"../models/User\\";

@InputType()
export class UserCreateInput implements UserConstructor {
  @Field(() => ID, { nullable: false })
  id!: number;

  @Field(() => GraphQLJSON!, { nullable: false })
  jsonCol!: Prisma.JsonValue;
}

@InputType()
export class UserUpdateInput {
  @Field(() => ID, { nullable: true })
  id?: number;

  @Field(() => GraphQLJSON!, { nullable: false })
  jsonCol?: Prisma.JsonValue;
}

@InputType()
export class UserWhereInput {
  @Field(() => ID, { nullable: true })
  id?: number;

  @Field(() => GraphQLJSON!, { nullable: true })
  jsonCol?: Prisma.JsonValue;
}

@InputType()
export class UserPaginatorInput extends PaginatorInputs {}
"
`;

exports[`dto templater > with relation 1`] = `
"/////////////////////////////////////
// THIS FILE WAS AUTO GENERATED
// DO NOT EDIT THIS FILE DIRECTLY
/////////////////////////////////////

import { Field, InputType, ID } from \\"@nestjs/graphql\\";
import {} from \\"./client-path\\";
import { PaginatorInputs } from \\"../paginator\\";
import { UserConstructor } from \\"../models/User\\";

@InputType()
export class UserCreateInput implements UserConstructor {
  @Field(() => ID, { nullable: false })
  id!: string;
}

@InputType()
export class UserUpdateInput {
  @Field(() => ID, { nullable: true })
  id?: string;
}

@InputType()
export class UserWhereInput {
  @Field(() => ID, { nullable: true })
  id?: string;
}

@InputType()
export class UserPaginatorInput extends PaginatorInputs {}
"
`;

exports[`dto templater > with uuid 1`] = `
"/////////////////////////////////////
// THIS FILE WAS AUTO GENERATED
// DO NOT EDIT THIS FILE DIRECTLY
/////////////////////////////////////

import { Field, InputType, ID } from \\"@nestjs/graphql\\";
import {} from \\"./client-path\\";
import { PaginatorInputs } from \\"../paginator\\";
import { UserConstructor } from \\"../models/User\\";

@InputType()
export class UserCreateInput implements UserConstructor {
  @Field(() => ID, { nullable: false })
  id!: string;
}

@InputType()
export class UserUpdateInput {
  @Field(() => ID, { nullable: true })
  id?: string;
}

@InputType()
export class UserWhereInput {
  @Field(() => ID, { nullable: true })
  id?: string;
}

@InputType()
export class UserPaginatorInput extends PaginatorInputs {}
"
`;
